2012-11-02  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace-utils.spec (Requires): Unbump dtrace-kernel-interface.

2012-10-29  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_module.c (dtrace_lookup_by_addr): sip and symp can
	both be NULL.
	* libdtrace/dt_symtab.c (dt_symbol_search_arg): Unused, remove.
	(dt_symbol_search_cmp): Consider addresses within the range
	symbol..symbol+size to match the symbol.
	(dt_symbol_by_addr): Likewise.  bsearch() returns a pointer to a
	pointer to the symbol.

	* test/unittest/grammar/tst.stmts.r: Regenerated.
	* test/unittest/printf/tst.basics.r: Likewise.
	* test/unittest/printf/tst.sym.d: No longer XFAIL.
	* test/unittest/stack/tst.default.r: New.
	* test/unittest/stack/tst.default.r.p: Filter out everything but
	unresolved addresses and dtrace_stacktrace().

2012-10-18  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_module.c (dtrace_update): Shuffle dtrace to the
	front of the module list, not shared_ctf.
	* test/unittest/types/tst.notypeload.d: Both 2 and 3 are valid
	outputs. Emit a list of modules from which CTF was loaded on test
	failure.
	* test/unittest/types/tst.notypeload.d: Adjust.

2012-10-10  Nick Alcock  <nick.alcock@oracle.com>

	* .gitignore: Ignore build*, not build-*.

	Rename dtrace_ctf -> ctf / ctf_shared renaming.

	* libdtrace-ctf: Pull in .dtrace_ctf -> .ctf changes.
	* libdtrace/dt_impl.h (DT_DM_SHARED): New.
	(DT_DM_KERN_UNLOADED): Renumber.
	(dt_ctf_elf): Fix comment to cater for the renaming.
	* libdtrace/dt_module.c (dt_module_load): Build section names for
	DT_DM_SHARED modules differently.
	(dt_kern_module_find): Look up "ctf" in the kernpath hash and
	"shared_ctf" in the module list, not "dtrace_ctf" in both.
	Set DT_DM_SHARED appropriately.  Adjust error messages.
	(dt_modsym_update): Transform the "ctf" module's name to
	"shared_ctf".
	(dtrace_update): Shuffle "shared_ctf" to start, not "dtrace_ctf".
	* libproc/Psymtab.c (Pbuild_file_symtab): Cater for the section
	renaming.