@@ -1,3 +1,8 @@
+2012-10-30  Nick Alcock  <nick.alcock@oracle.com>
+
+	* libdtrace/dt_symtab.h (dt_symbol, dt_symtab, DT_ST_*): Move to...
+	* libdtrace/dt_symtab.c: ... here.
+
 2012-11-02  Nick Alcock  <nick.alcock@oracle.com>
 
 	* dtrace-utils.spec (Requires): Unbump dtrace-kernel-interface.
